--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,27 @@ body {
 }
 
 
+/* Scroll to Top Button */
+
+.back-to-top {
+    position: fixed;
+    bottom: 6%;
+    right: 3%;
+    background-color: transparent;
+    color: black;
+    cursor: pointer;
+    padding: .6rem .8rem;
+    border-radius: 50%;
+
+}
+
+.back-to-top:hover {
+    background-color: black;
+    color: white;
+}
+
+
+
 
 /* Header / Navigation Bar */
 
@@ -29,6 +50,10 @@ body {
 .navBar a {
     text-decoration: none;
     color: black;
+}
+
+.navBar a:hover  {
+    text-decoration: underline;
 }
 
 .navBar li:first-child {
@@ -50,7 +75,7 @@ body {
 .hero-section {
     display: flex;
     justify-content: center;
-    margin-top: 7%;
+    margin-top: 10%;
     
 }
 
@@ -62,6 +87,7 @@ body {
 .hero-section img {
     width: 100%;
     align-self: center;
+    /* box-shadow: 0px 0px 5px 3px #C6C0C5; */
 }
 
 
@@ -94,7 +120,7 @@ body {
 /* Hero Section - Buttons */
 
 .intro-btn {
-    padding: 3% 4%;
+    padding: 3% 7%;
     border-radius: 1rem;
     cursor: pointer;
 }
@@ -106,22 +132,30 @@ body {
     border: none;
 }
 
+.intro-btn-1 a {
+    text-decoration: none;
+    color: white;
+}
+
+
 .intro-btn-1:hover {
     color: black;
     background-color: white;
-    border: gray solid .15rem;
+    outline: gray solid .15rem;
 }
 
 .intro-btn-2 {
     margin-left: 2%;
     background-color: white;
-    border: gray solid .15rem;
+    outline: gray solid .15rem;
+    border: none;
 }
 
 .intro-btn-2:hover {
     color: white;
     background-color: black;
     border: none;
+    outline: none;
 }
 
 
@@ -151,46 +185,367 @@ body {
 
 
 
+/* Headers */
 
 
-
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
-    
-}
-
-.about-me-header {
-    grid-column-start: span 2;
+.about-me-header,
+.expertise-header,
+.projects-header,
+.contact-body {
     text-align: center;
     margin-top: 15%;
+    margin-bottom: 2%;
 }
 
-.about-me-header h4 {
+.about-me-header h4,
+.expertise-header h4,
+.projects-header h4,
+.contact-body h4{
     color: gray;
 }
 
-.about-me-header h2 {
+.about-me-header h2,
+.expertise-header h2,
+.projects-header h2,
+.contact-body h2 {
     font-size: 3rem;
+    padding-bottom: 2%;
 }
 
-/* .codecademy-cert {
-    justify-items: center;
+
+.about-me-header {
+    padding-top: 5%;
+    padding-bottom: 3%;
 }
 
-.codecademy-cert img {
-    border: gray;
-    width: 75%;
+.about-me-body {
+    display: flex;
+    justify-content: center;
     
-} */
+}
+
+
+.about-me-body ul {
+    list-style: none;
+}
+
+
+
+.about-me {
+    width: 33%;
+    padding-top: 2%;
+    padding-right: 5%;
+    line-height: 1.5rem;
+    font-size: 1.25rem
+}
+
+
+
 
 .certifications {
     border: solid gray .1rem;
+    box-shadow: 0px 0px 5px 3px #C6C0C5;
     text-align: center;
-    margin-left: 5%;
+    margin-right: 5%;
+    padding: 1% 2% 5% 2%;
+    border-radius: 3rem;
+}
+
+.certifications h4 {
+    padding-top: 5%;
+    padding-bottom: 15%;
+    font-weight: bold;
+    font-size: 1.5rem;
 }
 
 .certifications ul {
+    text-align: start;
+    
+}
+
+.certifications li {
+    padding-bottom: 10%;
+    
+}
+
+
+
+
+.experience {
+    border: solid darkgrey .1rem;
+    box-shadow: 0px 0px 5px 3px #C6C0C5;
+    text-align: center;
+    padding: 1% 4% 3% 4%;
+    border-radius: 3rem;
+}
+
+.experience h4 {
+    font-weight: bold;
+    font-size: 1.5rem;
+    padding-top: 5%;
+    padding-bottom: 20%;
+}
+
+.experience ul {
+    text-align: start;
+    
+}
+
+.experience li {
+    padding-bottom: 15%;
+}
+
+
+
+/* Expertise */
+
+.expertise-header {
+    padding-top: 5%;
+}
+
+.expertise-body {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.expertise-body h4 {
+    padding: 5% 5% 15% 5%;
+    font-size: 1.75rem;
+    color: gray;
+    width:  100%;
+}
+
+
+.sub-captions {
+    font-size: 1rem;
+    color: rgb(182, 180, 180);
+}
+
+
+
+
+
+.frontend {
+    border: solid darkgrey .1rem;
+    padding: 1% 5% 2% 5%;
+    border-radius: 3rem;
+    box-shadow: 0px 0px 5px 3px #C6C0C5;
+    text-align: center;
+}
+
+.frontend-lists {
+    display: flex;
+    justify-content: center;
+}
+
+
+.frontend-lists li {
+    font-size: 1.5rem;
+    padding-bottom: 25%;
+    text-align: start;
+    font-weight: bold;
+    list-style-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23000000"><path d="M9 19c-.26 0-.51-.1-.71-.29l-6-6A.996.996 0 1 1 3.7 11.3l5.29 5.29L20.28 5.3a.996.996 0 1 1 1.41 1.41l-12 12c-.2.2-.45.29-.71.29Z"></path></svg>'); 
+}
+
+.frontend-lists li::marker {
+    font-size: 2rem;
+}
+
+
+
+
+
+
+
+
+.backend {
+    border: solid darkgrey .1rem;
+    padding: 1% 5% 5% 5%;
+    border-radius: 3rem;
+    text-align: center;
+    box-shadow: 0px 0px 5px 3px #C6C0C5;
+}
+
+.backend-lists li {
+    font-size: 1.5rem;
+    padding-bottom: 25%;
+    text-align: start;
+    font-weight: bold;
+    list-style-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23000000"><path d="M9 19c-.26 0-.51-.1-.71-.29l-6-6A.996.996 0 1 1 3.7 11.3l5.29 5.29L20.28 5.3a.996.996 0 1 1 1.41 1.41l-12 12c-.2.2-.45.29-.71.29Z"></path></svg>'); 
+}
+
+.backend-lists {
+    display: flex;
+    justify-content: center;
+}
+
+.left-list {
+    margin-right: 40%;
+   
+}
+
+
+
+
+
+
+/* Projects Section */
+
+.projects-header {
+    padding-top: 5%;
+    padding-bottom: 3%;
+}
+
+
+.projects-body {
+    display: flex;
+    justify-content: center;
+}
+
+.project img {
+    width: 100%;
+    border-radius: 5rem;
+    margin-bottom: 10%;
+}
+
+.project {
+    text-align: center;
+    margin: 0 5%;
+    padding: 2% 2% 2% 2%;
+    border: solid darkgrey .1rem;
+    box-shadow: 0px 0px 5px 3px #C6C0C5;
+    border-radius: 5rem;
+}
+
+.project h3 {
+    font-size: 1.5rem;
+}
+
+.project-1 {
+    margin-left: 10%;
+}
+
+.project-3 {
+    margin-right: 10%;
+}
+
+
+
+
+/* Project Section - Buttons */
+
+.project-btns {
+    margin-top: 10%;
+ 
+} 
+
+.project-btn {
+    padding: 3% 7%;
+    border-radius: 1rem;
+    cursor: pointer;
+}
+
+.project-btn-1 {
+    margin-right: 2%;
+    background-color: black;
+    color: white;
+    border: none;
+}
+
+.project-btn-1 a {
+    text-decoration: none;
+    color: white;
+}
+
+
+.project-btn-1:hover {
+    color: black;
+    background-color: white;
+    outline: gray solid .15rem;
+}
+
+.project-btn-2 {
+    margin-left: 2%;
+    background-color: white;
+    outline: gray solid .15rem;
+    border: none;
+}
+
+.project-btn-2:hover {
+    color: white;
+    background-color: black;
+    border: none;
+    outline: none;
+}
+
+
+
+
+
+
+
+.contact-body{
+    margin-top: 20%;
+}
+
+.contact-header h2 {
+    margin-bottom: 1%;
+    padding-bottom: 0;
+}
+
+.contact-info {
+    display: flex;
+    justify-content: center;
+    font-size: 1.5rem;
+    margin: 0 32%;
+    padding: 1% 0;
+    border: solid darkgrey .1rem;
+    border-radius: 5rem;
+}
+
+.email {
+    padding-right: 15%;
+}
+
+.contact-info section {
+    padding-left: 1%;
+} 
+
+.contact-info a {
+    color: black;
+    text-decoration: none;
+}
+
+.contact-info a:hover {
+    color: blue;
+}
+
+footer {
+    margin-top: 15%;
+}
+
+.footerNav {
+    display: flex;
+    justify-content: center;
     list-style: none;
+    font-size: 1.5rem;
+}
+
+.footerNav li {
+    padding: 0 2%;
+}
+
+.footerNav a  {
+    color: black;
+    text-decoration: none;
+}
+
+.footerNav a:hover  {
+    text-decoration: underline;
+}
+
+footerBase {
+    display: flex;
+    justify-content: center;
+    margin-top: 3%;
 }
