--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,15 @@
 * {
     margin: 0;
     padding: 0;
-    /* outline: solid red .1rem; */
+    outline: solid red .1rem;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
-    height: 100vh;
+    min-height: 100vh;
     font-family: 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -30,7 +34,6 @@ body {
     background-color: black;
     color: white;
 }
-
 
 
 
@@ -191,7 +194,7 @@ body {
 .about-me-header,
 .expertise-header,
 .projects-header,
-.contact-body {
+.contact-header {
     text-align: center;
     margin-top: 15%;
     margin-bottom: 2%;
@@ -200,14 +203,14 @@ body {
 .about-me-header h4,
 .expertise-header h4,
 .projects-header h4,
-.contact-body h4{
+.contact-header h4{
     color: gray;
 }
 
 .about-me-header h2,
 .expertise-header h2,
 .projects-header h2,
-.contact-body h2 {
+.contact-header h2 {
     font-size: 3rem;
     padding-bottom: 2%;
 }
@@ -233,11 +236,13 @@ body {
 
 .about-me {
     width: 33%;
-    padding-top: 2%;
-    padding-right: 5%;
+    margin: 2% 5% 5% 2%;
     line-height: 1.5rem;
     font-size: 1.25rem
 }
+
+
+
 
 
 
@@ -276,6 +281,7 @@ body {
     box-shadow: 0px 0px 5px 3px #C6C0C5;
     text-align: center;
     padding: 1% 4% 3% 4%;
+    margin-right: 2%;
     border-radius: 3rem;
 }
 
@@ -297,6 +303,11 @@ body {
 
 
 
+
+
+
+
+
 /* Expertise */
 
 .expertise-header {
@@ -305,7 +316,7 @@ body {
 
 .expertise-body {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .expertise-body h4 {
@@ -328,14 +339,20 @@ body {
 .frontend {
     border: solid darkgrey .1rem;
     padding: 1% 5% 2% 5%;
+    margin-right: 2%;
+    margin-left: 2%;
     border-radius: 3rem;
     box-shadow: 0px 0px 5px 3px #C6C0C5;
     text-align: center;
 }
 
+
+
 .frontend-lists {
     display: flex;
     justify-content: center;
+    padding: 5%;
+    margin-left: 10%;
 }
 
 
@@ -361,9 +378,17 @@ body {
 .backend {
     border: solid darkgrey .1rem;
     padding: 1% 5% 5% 5%;
+    margin-left: 2%;
+    margin-right: 2%;
     border-radius: 3rem;
-    text-align: center;
     box-shadow: 0px 0px 5px 3px #C6C0C5;
+    text-align: center;
+}
+
+.backend-lists {
+    display: flex;
+    justify-content: center;
+    padding: 5%;
 }
 
 .backend-lists li {
@@ -374,13 +399,10 @@ body {
     list-style-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23000000"><path d="M9 19c-.26 0-.51-.1-.71-.29l-6-6A.996.996 0 1 1 3.7 11.3l5.29 5.29L20.28 5.3a.996.996 0 1 1 1.41 1.41l-12 12c-.2.2-.45.29-.71.29Z"></path></svg>'); 
 }
 
-.backend-lists {
-    display: flex;
-    justify-content: center;
-}
+
 
 .left-list {
-    margin-right: 40%;
+    margin-right: 35%;
    
 }
 
@@ -400,12 +422,14 @@ body {
 .projects-body {
     display: flex;
     justify-content: center;
+    margin-bottom: 20%;
 }
 
 .project img {
     width: 100%;
     border-radius: 5rem;
     margin-bottom: 10%;
+    padding: 2%;
 }
 
 .project {
@@ -435,8 +459,9 @@ body {
 /* Project Section - Buttons */
 
 .project-btns {
+    text-align: center;
     margin-top: 10%;
- 
+    
 } 
 
 .project-btn {
@@ -483,11 +508,6 @@ body {
 
 
 
-
-.contact-body{
-    margin-top: 20%;
-}
-
 .contact-header h2 {
     margin-bottom: 1%;
     padding-bottom: 0;
@@ -495,20 +515,29 @@ body {
 
 .contact-info {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     font-size: 1.5rem;
-    margin: 0 32%;
     padding: 1% 0;
     border: solid darkgrey .1rem;
     border-radius: 5rem;
+    margin: 0 30%;
 }
 
-.email {
-    padding-right: 15%;
+.email-section {
+    display: flex;
+    justify-content: center;
 }
 
-.contact-info section {
-    padding-left: 1%;
+
+.linkedin-section {
+    display: flex;
+    justify-content: center;
+}
+
+.email,
+.linkedin {
+    padding-left: 5%;
 } 
 
 .contact-info a {
@@ -519,6 +548,10 @@ body {
 .contact-info a:hover {
     color: blue;
 }
+
+
+
+
 
 footer {
     margin-top: 15%;
@@ -548,4 +581,42 @@ footerBase {
     display: flex;
     justify-content: center;
     margin-top: 3%;
+}
+
+
+
+
+
+
+/* About-Me Media Queries */
+
+@media screen and (max-width: 67.5em) {
+    .about-me-body {
+        display: block;
+        width: 50%;
+        text-align: center;
+        margin: 0 auto;
+    }
+
+    .about-me {
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .certifications {
+        margin: 5% auto;
+    }
+
+    .certifications h4 {
+        padding-bottom: 10%;
+    }
+
+    .experience {
+        margin: 5% auto;
+    }
+
+    .experience h4 {
+        padding-bottom: 10%;
+    }
+    
 }
