--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,24 @@
     margin: 0;
     padding: 0;
     /* outline: solid red .1rem; */
+    
+}
+
+@keyframes fade-in {
+    from {opacity: 0;}
+    to{opacity: 1;}
+}
+
+body > * {
+    animation: fade-in linear;
+    animation-timeline: view();
+    animation-range-start: cover;
+    animation-range-end: 700px;
+
+}
+
+button {
+    animation: none!important;
 }
 
 html {
@@ -11,6 +29,8 @@ html {
 }
 
 body {
+    
+    /* background: linear-gradient(#ffffff, #3f3e3e); */
     min-height: 100vh;
     font-family: 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -200,7 +220,7 @@ body {
 .projects-header,
 .contact-header {
     text-align: center;
-    margin-top: 15%;
+    margin-top: 5%;
     margin-bottom: 2%;
 }
 
@@ -551,6 +571,13 @@ body {
     padding-bottom: 0;
 }
 
+.contact-body {
+    animation: fade-in linear;
+    animation-timeline: view();
+    animation-range-start: cover!important;
+    animation-range-end: 100px!important;
+}
+
 .contact-info {
     display: flex;
     flex-wrap: wrap;
@@ -595,6 +622,7 @@ body {
 
 footer {
     margin-top: 15%;
+    animation: none!important;
 }
 
 .footerNav {
@@ -621,6 +649,7 @@ footerBase {
     display: flex;
     justify-content: center;
     margin-top: 3%;
+    animation: none!important;
 }
 
 
