--- a/styles.css
+++ b/styles.css
@@ -1,104 +1,134 @@
-/* Universal Styling */
-
 * {
     margin: 0;
     padding: 0;
-    /* outline: solid red .1rem; */
+    outline: solid red .1rem;
     
 }
 
-@keyframes fade-in {
-    from {opacity: 0;}
-    to{opacity: 1;}
-}
-
-body > * {
-    animation: fade-in linear;
-    animation-timeline: view();
-    animation-range-start: cover;
-    animation-range-end: 700px;
-
-}
-
-button {
-    animation: none!important;
-}
 
 html {
     scroll-behavior: smooth;
 }
 
-
-
-/* Scroll to Top Button */
-
-.back-to-top {
-    position: fixed;
-    bottom: 6%;
-    right: 3%;
-    background-color: transparent;
-    color: black;
-    cursor: pointer;
-    padding: .6rem .8rem;
-    border-radius: 50%;
-
-}
-
-.back-to-top:hover {
-    background-color: black;
-    color: white;
+body {
+    font-family: 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 
 
-/* Header / Navigation Bar */
+
+/* About Me Slideout */
 
 
-.navBar {
+.main-body {
     display: flex;
-    list-style: none;
-    padding: 1% 10% 0 0;
-}
-
-.navBar li {
+    height: 100vh;
+  }
+  
+.main {
+    flex-grow: 1;
+    padding: 1rem;
+    /* overflow-y: auto; */
+  }
+  
+.toggle-btns {
+    width: 9rem;
+    height: 3.5rem;
+    flex-shrink: 0;
+    display: grid;
+    place-items: center;
+    
+  
     font-size: 1.5rem;
+    color: #ffffff;
+    
+    border: none;
+    border-radius: 5px 0 0 5px;
+    outline: none;
+    cursor: pointer;
+
+    /* -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s; */
+  }
+  
+  .about-me-toggle:hover {
+    background: #007960;
+  }
+
+  .about-me-toggle {
+    background: #009578;
+    position: fixed;
+    transition-delay: right 2s, top 2s;
+    right: 0;
+    top: 0;
+
+    
+    
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+  }
+  
+  
+
+  .certifications-toggle {
+    background: #2539e6;
+    position: absolute;
+    right: 0;
+    top: 3.5rem;
+  }
+
+  .certifications-toggle:hover {
+    background: #040e6e;
+  }
+ 
+  .slide-panels {
+    width: 0;
+    flex-shrink: 0;
+    color: #ffffff;
+    background: #009578;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.35);
+
+    -webkit-transition-duration: 1.25s;
+    -moz-transition-duration: 1.25s;
+    -o-transition-duration: 1.25s;
+    transition-duration: 1.25s
+  }
+
+
+  .certfications {
+
+  }
+
+.about-me p{
+    margin-right: 9rem;
 }
-
-.navBar a {
-    text-decoration: none;
-    color: black;
-}
-
-.navBar a:hover  {
-    text-decoration: underline;
-}
-
-.navBar li:first-child {
-    margin-right: auto;
-    font-size: 3rem;
-    padding-left: 5%;
-}
-
-.navBar > *:not(:first-child) {
-    padding-top: 1%;
-    padding-left: 5%;
-}
+  
 
 
 
 
-/* Hero Section - Portrait*/
+
+  /* Hero Section - Portrait*/
 
 .hero-section {
-    display: flex;
-    justify-content: center;
-    margin-top: 10%;
-    
+    display: block;
+    height: 90%;
+    padding-top: 5%;
+
+    -webkit-transition-duration: 1.25s;
+    -moz-transition-duration: 1.25s;
+    -o-transition-duration: 1.25s;
+    transition-duration: 1.25s
 }
 
 .portrait {
-    width: 25%;
-    
+    width: 30%; 
+    margin: 0 auto;
+    transition: width 1s;
 }
 
 .hero-section img {
@@ -115,7 +145,6 @@ html {
 .introduction {
     text-align: center;
     align-self: center;
-    margin-left: 5%;
 }
 
 .introduction h4 {
@@ -123,22 +152,20 @@ html {
 }
 
 .introduction h1 {
-    padding-top: 2%;
     font-size: 3rem;
 }
 
 .introduction h2 {
-    padding-top: 4%;
-    padding-bottom: 10%;
     color: gray;
+    padding: 1% 0;
 }
 
 
 /* Hero Section - Buttons */
 
 .intro-btn {
-    font-size: 1.15rem;
-    padding: 2% 4%;
+    font-size: 1.25rem;
+    padding: .5% 1%;
     border-radius: 1rem;
     cursor: pointer;
 }
@@ -163,7 +190,6 @@ html {
 }
 
 .intro-btn-2 {
-    margin-left: 2%;
     background-color: white;
     outline: gray solid .15rem;
     border: none;
@@ -184,7 +210,7 @@ html {
 }
 
 .socials-btns a{
-    margin: 4% 2%;
+    margin: 2% 1%;
 
 }
 
@@ -205,613 +231,4 @@ html {
     color: #2366C0;
 }
 
-
-
-/* Headers */
-
-
-.about-me-header,
-.expertise-header,
-.projects-header,
-.contact-header {
-    text-align: center;
-    margin-top: 5%;
-    margin-bottom: 2%;
-}
-
-.about-me-header h4,
-.expertise-header h4,
-.projects-header h4,
-.contact-header h4{
-    color: gray;
-}
-
-.about-me-header h2,
-.expertise-header h2,
-.projects-header h2,
-.contact-header h2 {
-    font-size: 3rem;
-    padding-bottom: 2%;
-}
-
-
-.about-me-header {
-    padding-top: 5%;
-    padding-bottom: 3%;
-}
-
-.about-me-body {
-    display: flex;
-    justify-content: center;
-    
-}
-
-
-.about-me-body ul {
-    list-style: none;
-}
-
-.about-me-leftside {
-    display: flex;
-    justify-content: center;
-    width: 40%;
-}
-
-
-
-.about-me {
-    width: 100%;
-    margin: 0 5% 5% 30%;
-    line-height: 1.5rem;
-    font-size: 1.25rem;
-}
-
-.about-me:hover{
-    scale: 1.1;
-}
-
-.about-me-rightside {
-    display: flex;
-    justify-content: space-evenly;
-    width: 60%;
-}
-
-
-
-.certifications {
-    border: solid gray .1rem;
-    box-shadow: 0px 0px 5px 3px #C6C0C5;
-    text-align: center;
-    padding: 1% 2% 5% 2%;
-    border-radius: 3rem;
-    width: 100%;
-    margin: 0 5%;
-}
-
-.certifications:hover {
-    scale: 1.1;
-}
-
-.certifications h4 {
-    padding-top: 5%;
-    padding-bottom: 15%;
-    font-weight: bold;
-    font-size: 1.5rem;
-}
-
-.certifications ul {
-    text-align: start;
-    
-}
-
-.certifications li {
-    padding-bottom: 10%;
-    
-}
-
-
-
-
-.experience {
-    border: solid darkgrey .1rem;
-    box-shadow: 0px 0px 5px 3px #C6C0C5;
-    text-align: center;
-    padding: 1% 2% 5% 2%;
-    border-radius: 3rem;
-    width: 100%;
-    margin: 0 5%;
-}
-
-.experience:hover {
-    scale: 1.1;
-}
-
-.experience h4 {
-    font-weight: bold;
-    font-size: 1.5rem;
-    padding-top: 5%;
-    padding-bottom: 15%;
-}
-
-.experience ul {
-    text-align: start;
-    margin-left: 5%;
-}
-
-.experience li {
-    padding-bottom: 15%;
-}
-
-
-
-
-
-
-
-
-/* Expertise */
-
-.expertise-header {
-    padding-top: 5%;
-}
-
-.expertise-body {
-    display: flex;
-    justify-content: center;
-}
-
-.expertise-body h4 {
-    padding: 5% 5% 15% 5%;
-    font-size: 1.75rem;
-    color: gray;
-    width:  100%;
-}
-
-
-.sub-captions {
-    font-size: 1rem;
-    color: rgb(182, 180, 180);
-}
-
-
-
-
-
-.frontend {
-    border: solid darkgrey .1rem;
-    padding: 1% 5% 2% 5%;
-    margin-right: 2%;
-    margin-left: 2%;
-    border-radius: 3rem;
-    box-shadow: 0px 0px 5px 3px #C6C0C5;
-    text-align: center;
-}
-
-.frontend:hover {
-    scale: 1.1;
-}
-
-.frontend-lists {
-    display: flex;
-    justify-content: center;
-    padding: 5%;
-    margin-left: 10%;
-}
-
-
-.frontend-lists li {
-    font-size: 1.5rem;
-    padding-bottom: 25%;
-    text-align: start;
-    font-weight: bold;
-    list-style-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23000000"><path d="M9 19c-.26 0-.51-.1-.71-.29l-6-6A.996.996 0 1 1 3.7 11.3l5.29 5.29L20.28 5.3a.996.996 0 1 1 1.41 1.41l-12 12c-.2.2-.45.29-.71.29Z"></path></svg>'); 
-}
-
-.frontend-lists li::marker {
-    font-size: 2rem;
-}
-
-
-
-
-
-
-
-
-.backend {
-    border: solid darkgrey .1rem;
-    padding: 1% 5% 5% 5%;
-    margin-left: 2%;
-    margin-right: 2%;
-    border-radius: 3rem;
-    box-shadow: 0px 0px 5px 3px #C6C0C5;
-    text-align: center;
-}
-
-.backend:hover {
-    scale: 1.1;
-}
-
-.backend-lists {
-    display: flex;
-    justify-content: center;
-    padding: 5%;
-}
-
-.backend-lists li {
-    font-size: 1.5rem;
-    padding-bottom: 25%;
-    text-align: start;
-    font-weight: bold;
-    list-style-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23000000"><path d="M9 19c-.26 0-.51-.1-.71-.29l-6-6A.996.996 0 1 1 3.7 11.3l5.29 5.29L20.28 5.3a.996.996 0 1 1 1.41 1.41l-12 12c-.2.2-.45.29-.71.29Z"></path></svg>'); 
-}
-
-
-
-.left-list {
-    margin-right: 35%;
-   
-}
-
-
-
-
-
-
-/* Projects Section */
-
-.projects-header {
-    padding-top: 5%;
-    padding-bottom: 3%;
-}
-
-
-.projects-body {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20%;
-}
-
-.project img {
-    width: 90%;
-    border-radius: 5rem;
-    margin: 0 auto;
-    padding: 2% 2% 10% 2%;
-}
-
-.project {
-    text-align: center;
-    margin: 0 1%;
-    padding: 2%;
-    border: solid darkgrey .1rem;
-    box-shadow: 0px 0px 5px 3px #C6C0C5;
-    border-radius: 5rem;
-}
-
-.project:hover {
-    scale: 1.1;
-}
-
-.project h3 {
-    font-size: 1.5rem;
-}
-
-.project-1 {
-    margin-left: 10%;
-}
-
-.project-3 {
-    margin-right: 10%;
-}
-
-
-
-
-
-
-/* Project Section - Buttons */
-
-.project-btns {
-    text-align: center;
-    margin-top: 10%;
-    
-} 
-
-.project-btn {
-    padding: 3% 7%;
-    border-radius: 1rem;
-    cursor: pointer;
-}
-
-.project-btn-1 {
-    margin-right: 2%;
-    background-color: black;
-    color: white;
-    border: none;
-}
-
-.project-btn-1 a {
-    text-decoration: none;
-    color: white;
-}
-
-
-.project-btn-1:hover {
-    color: black;
-    background-color: white;
-    outline: gray solid .15rem;
-}
-
-.project-btn-2 {
-    margin-left: 2%;
-    background-color: white;
-    outline: gray solid .15rem;
-    border: none;
-}
-
-.project-btn-2:hover {
-    color: white;
-    background-color: black;
-    border: none;
-    outline: none;
-}
-
-
-
-
-
-
-.contact-header h2 {
-    margin-bottom: 1%;
-    padding-bottom: 0;
-}
-
-.contact-body {
-    animation: fade-in linear;
-    animation-timeline: view();
-    animation-range-start: cover!important;
-    animation-range-end: 100px!important;
-}
-
-.contact-info {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    font-size: 1.5rem;
-    padding: 1% 0;
-    border: solid darkgrey .1rem;
-    border-radius: 5rem;
-    margin: 0 30%;
-}
-
-.email-section {
-    display: flex;
-    justify-content: center;
-}
-
-
-.linkedin-section {
-    display: flex;
-    justify-content: center;
-}
-
-.email,
-.linkedin {
-    padding-left: 5%;
-} 
-
-.contact-info a {
-    color: black;
-    text-decoration: none;
-}
-
-.contact-info a:hover {
-    color: blue;
-}
-
-.material-symbols-outlined:hover {
-    scale: 1.1;
-}
-
-
-
-footer {
-    margin-top: 15%;
-    animation: none!important;
-}
-
-.footerNav {
-    display: flex;
-    justify-content: center;
-    list-style: none;
-    font-size: 1.5rem;
-}
-
-.footerNav li {
-    padding: 0 2%;
-}
-
-.footerNav a  {
-    color: black;
-    text-decoration: none;
-}
-
-.footerNav a:hover  {
-    text-decoration: underline;
-}
-
-footerBase {
-    display: flex;
-    justify-content: center;
-    margin-top: 3%;
-    animation: none!important;
-}
-
-
-
-
-
-/* Tablet - Landscape */
-
-@media screen and (max-width: 85.6em) {
-
-    .hero-section {
-        padding-top: 7%;
-    }
-
-    .portrait {
-        width: 35%; 
-    }
-
-
-}
-
-
-
-/* Tablet - Portait*/
-
-@media screen and (max-width: 67.5em) {
-
-    .navBar {
-        padding: 1% 2% 0 0;
-    }
-
-    .hero-section {
-        display: block;
-        margin-top: 0;
-        padding-top: 5%;
-        padding-bottom: 22%;
-    }
-
-    .portrait {
-        width: 50%; 
-        margin: 0 auto;
-    }
-
-    .introduction {
-        margin: 0 auto;
-    }
-
-    .introduction h4 {
-        padding-top: 1%;
-    } 
-
-    .introduction h1 {
-        padding: 0;
-    }
-
-    .introduction h2 {
-        padding-top: 0;
-        padding-bottom: 2%;
-    }
-
-
-    .intro-btn {
-        margin: 0 .5%;
-        padding: 1%;
-    }
-
-    .socials-btns ul a {
-        padding: 1%;
-        margin: 0;
-    }
-
  
-
-    .about-me-header {
-        margin-bottom: 0;
-        padding-bottom: 0;
-    }
-
-    .about-me-body {
-        flex-direction: column;
-        align-content: center;
-        flex-wrap: wrap;
-    }
-
-    .about-me {
-        width: 75%;
-        margin: 2% auto;
-        display: inline;
-    }
-
-    .about-me-leftside {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        margin: 2% 5%;
-    }
-
-    .about-me-rightside {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        margin: 0 5%;
-    }
-
-
-    .certifications {
-        margin: 2%;
-    }
-
-    .certifications h4 {
-        padding-bottom: 10%;
-    }
-
-    .experience {
-        margin: 2%;
-    }
-
-    .experience h4 {
-        padding-bottom: 10%;
-    }
-    
-
-
-
-
-    .project {
-        padding: 2%;
-        margin: 2%;
-    }
-
-    .projects-header {
-        padding-top: 10%;
-    }
-
-
-    .projects-body{
-        justify-content: space-evenly;
-    }
-
-
-
-    .contact-info {
-        border: none;
-    }
-
-    .email-section {
-        border: solid darkgrey .1rem;
-        border-radius: 5rem;
-        padding: 1% 5%;
-    }
-
-    .linkedin-section {
-        margin-top: 1%;
-        border: solid darkgrey .1rem;
-        border-radius: 5rem;
-        padding: 1% 5%;
-    }
-
-
-
-
-    /* header {
-        display: none;
-    }
-
-    .portrait {
-        display: none;
-    } */
-
-}
