--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,15 @@
 
 
 html {
+    
     scroll-behavior: smooth;
 }
 
 body {
+    height: 100vh;
     font-family: 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 
 
 
@@ -24,12 +27,16 @@ body {
     display: flex;
     height: 100vh;
   }
+
+
   
 .main {
+    
     flex-grow: 1;
     padding: 1rem;
     /* overflow-y: auto; */
   }
+  
   
 .toggle-btns {
     width: 9rem;
@@ -37,59 +44,91 @@ body {
     flex-shrink: 0;
     display: grid;
     place-items: center;
-    
+    z-index: 5;
   
     font-size: 1.5rem;
     color: #ffffff;
+    box-shadow: -5px 0 5px rgba(0, 0, 0, 0.35);
     
     border: none;
     border-radius: 5px 0 0 5px;
     outline: none;
     cursor: pointer;
-
-    /* -webkit-transition-duration: 0.3s;
-    -moz-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s; */
+ 
   }
-  
+
+ 
   .about-me-toggle:hover {
-    background: #007960;
+    background-color: #b94634;
   }
 
   .about-me-toggle {
-    background: #009578;
+    background-color: #E37A6B;
     position: fixed;
-    transition-delay: right 2s, top 2s;
     right: 0;
     top: 0;
 
     
+    -webkit-transition-duration: 1.25s;
+    -moz-transition-duration: 1.25s;
+    -o-transition-duration: 1.25s;
+    transition-duration: 1.25s;
+  }
+
+  .about-me {
+    background-color: #E37A6B;
+    margin: 0;
+
     
-    -webkit-transition-duration: 0.3s;
-    -moz-transition-duration: 0.3s;
-    -o-transition-duration: 0.3s;
-    transition-duration: 0.3s;
   }
   
-  
+  .about-me-content{
+    margin-top: 0;
+    margin-right: 9rem;
+    margin-left: 1rem;
+}
 
   .certifications-toggle {
-    background: #2539e6;
-    position: absolute;
+    position: fixed;
     right: 0;
-    top: 3.5rem;
+    top: 4rem;
+    margin-top: .5rem;
+    background-color: #6B9AE3;
+
+
+    -webkit-transition-duration: 1.25s;
+    -moz-transition-duration: 1.25s;
+    -o-transition-duration: 1.25s;
+    transition-duration: 1.25s;
   }
 
   .certifications-toggle:hover {
-    background: #040e6e;
+    background-color: #2a5292;
+  }
+
+  .certifications {
+    background-color: #6B9AE3;
+    
+    
+    -webkit-transition-duration: 1.25s;
+    -moz-transition-duration: 1.25s;
+    -o-transition-duration: 1.25s;
+    transition-duration: 1.25s;
+  }
+
+  .certifications-content {
+    margin: 4rem 9rem 0 1rem;
   }
  
-  .slide-panels {
+
+
+
+/* the problem VVVVV */
+
+.slide-panels {
     width: 0;
     flex-shrink: 0;
     color: #ffffff;
-    background: #009578;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.35);
 
     -webkit-transition-duration: 1.25s;
@@ -99,20 +138,22 @@ body {
   }
 
 
-  .certfications {
 
-  }
+ 
 
-.about-me p{
-    margin-right: 9rem;
-}
+
   
 
 
 
 
 
-  /* Hero Section - Portrait*/
+
+
+
+
+
+ /* Hero Section - Portrait*/
 
 .hero-section {
     display: block;
@@ -157,7 +198,7 @@ body {
 
 .introduction h2 {
     color: gray;
-    padding: 1% 0;
+    padding: .5% 0;
 }
 
 
@@ -210,7 +251,7 @@ body {
 }
 
 .socials-btns a{
-    margin: 2% 1%;
+    margin: 1% 1%;
 
 }
 
@@ -230,5 +271,4 @@ body {
 .fa-linkedin-square {
     color: #2366C0;
 }
-
  
